--- a/test.html
+++ b/test.html
@@ -77,21 +77,8 @@
       display: flex; flex-direction: column; gap: 10px;
       background: none; box-shadow: none;
     }
+    /* Nếu là iframe chatbase thì cho nó full ngang */
     #chatbase-chat iframe {
-      width: 100vw !important;
-      min-width: 100vw !important;
-      max-width: 100vw !important;
-      min-height: 520px !important;
-      height: calc(100vh - 135px) !important;
-      max-height: calc(100vh - 75px) !important;
-      border-radius: 10px;
-      border: 1.5px solid #eee;
-      background: #fff;
-      box-shadow: 0 4px 16px #185adb0d;
-      display: block;
-    }
-    /* --- Đoạn này là cho nebula tab mới --- */
-    #nebula-chat iframe {
       width: 100vw !important;
       min-width: 100vw !important;
       max-width: 100vw !important;
@@ -165,13 +152,13 @@
     @media (max-width:1100px){
       .msg-bubble, .msg-user .msg-bubble, .msg-ai .msg-bubble {max-width:99vw;margin-left:7vw;margin-right:7vw;}
       .chat-input-bar input{width:90vw;}
-      #chatbase-chat iframe, #nebula-chat iframe {height:calc(100vh - 115px) !important;}
+      #chatbase-chat iframe {height:calc(100vh - 115px) !important;}
     }
     @media (max-width:650px){
       .mini-header{padding:0 5px;}
       .msg-bubble, .msg-user .msg-bubble, .msg-ai .msg-bubble {margin-left:2vw;margin-right:2vw;}
       .chat-input-bar input{width:99vw;max-width:99vw;font-size:1.03rem;}
-      #chatbase-chat iframe, #nebula-chat iframe {height:calc(100vh - 90px) !important;}
+      #chatbase-chat iframe {height:calc(100vh - 90px) !important;}
     }
   </style>
 </head>
@@ -189,24 +176,25 @@
       </div>
       <div class="api-btns-group" id="api-btns-group" style="margin-right:24px;"></div>
     </div>
-    <div class="mode-switcher">
-      <button class="mode-btn active" onclick="switchMode('chatbase')">Chatbase</button>
-      <button class="mode-btn" onclick="switchMode('gpt')">Chat GPT</button>
-      <button class="mode-btn" onclick="switchMode('gemini')">Chat Gemini</button>
-      <button class="mode-btn" onclick="switchMode('nebula')">Nebula Vision</button>
-    </div>
-    <div class="chat-body">
-      <div id="chatbase-chat" class="chat-messages" style="display:block;text-align:center;padding:0;">
-        <iframe src="https://www.chatbase.co/chatbot-iframe/1pwNIgOXuse1aQvajtTiE"
-          width="100%" 
-          allow="clipboard-write"></iframe>
-      </div>
-      <div id="gpt-chat" class="chat-messages" style="display:none;"></div>
-      <div id="gemini-chat" class="chat-messages" style="display:none;"></div>
-      <div id="nebula-chat" class="chat-messages" style="display:none; padding:0; background:none;">
-        <iframe id="nebula-iframe" src="" style="width:100%; min-height:530px; border:none; background:#fff; border-radius:10px; box-shadow:0 2px 16px #185adb13;"></iframe>
-      </div>
-    </div>
+<div class="mode-switcher">
+  <button class="mode-btn active" onclick="switchMode('chatbase')">Chatbase</button>
+  <button class="mode-btn" onclick="switchMode('gpt')">Chat GPT</button>
+  <button class="mode-btn" onclick="switchMode('gemini')">Chat Gemini</button>
+  <button class="mode-btn" onclick="switchMode('koha')">AI KoHA</button> <!-- Thêm dòng này -->
+</div>
+<div class="chat-body">
+  <div id="chatbase-chat" class="chat-messages" style="display:block;text-align:center;padding:0;">
+    <iframe src="https://www.chatbase.co/chatbot-iframe/1pwNIgOXuse1aQvajtTiE"
+      width="100%" 
+      allow="clipboard-write"></iframe>
+  </div>
+  <div id="gpt-chat" class="chat-messages" style="display:none;"></div>
+  <div id="gemini-chat" class="chat-messages" style="display:none;"></div>
+  <!-- Thêm vùng này -->
+  <div id="koha-chat" class="chat-messages" style="display:none;padding:0;">
+    <iframe src="nebulaAI.html" width="100%" height="620" style="border:none; background:#fff; border-radius:10px; box-shadow:0 2px 14px #185adb18; min-height:520px;"></iframe>
+  </div>
+</div>
     <div class="chat-input-bar" id="chatbase-input" style="display:none;"></div>
     <div class="chat-input-bar" id="gpt-input" style="display:none;">
       <input id="userMsg-gpt" type="text" placeholder="Nhập câu hỏi..." autocomplete="off" onkeydown="if(event.key==='Enter'){sendMsgGPT();}">
@@ -216,7 +204,6 @@
       <input id="userMsg-gemini" type="text" placeholder="Nhập câu hỏi..." autocomplete="off" onkeydown="if(event.key==='Enter'){sendMsgGemini();}">
       <button onclick="sendMsgGemini()"><span>&#10148;</span></button>
     </div>
-    <!-- Không cần input cho nebula tab, vì giao diện vision đã có sẵn input riêng trong file -->
   </main>
   <footer id="footer"></footer>
   <!-- Popup nhập API Key -->
@@ -251,33 +238,26 @@
           <a class="getkey-btn" href="https://aistudio.google.com/apikey" target="_blank">🔗 Lấy Gemini Key</a>
           <button class="api-btn" onclick="openAPIKeyPopup('gemini')">🔑 Nhập Gemini Key</button>
         `;
-      } else if(mode==='nebula') {
-        // Nebula không cần nút nhập key, nên để trống
-        group.innerHTML = '';
       }
     }
-    function switchMode(mode) {
-      chatMode = mode;
-      document.querySelectorAll('.mode-btn').forEach((el,i)=>{
-        el.classList.toggle('active', (['chatbase','gpt','gemini','nebula'][i]===mode));
-      });
-      document.getElementById('chatbase-chat').style.display = mode==='chatbase'?'block':'none';
-      document.getElementById('chatbase-input').style.display = 'none';
-      document.getElementById('gpt-chat').style.display = mode==='gpt'?'block':'none';
-      document.getElementById('gpt-input').style.display = mode==='gpt'?'flex':'none';
-      document.getElementById('gemini-chat').style.display = mode==='gemini'?'block':'none';
-      document.getElementById('gemini-input').style.display = mode==='gemini'?'flex':'none';
-      document.getElementById('nebula-chat').style.display = mode==='nebula'?'block':'none';
+function switchMode(mode) {
+  chatMode = mode;
+  // Thêm 'koha' vào list các mode
+  document.querySelectorAll('.mode-btn').forEach((el,i)=>{
+    el.classList.toggle('active', (['chatbase','gpt','gemini','koha'][i]===mode));
+  });
+  document.getElementById('chatbase-chat').style.display = mode==='chatbase'?'block':'none';
+  document.getElementById('chatbase-input').style.display = 'none';
+  document.getElementById('gpt-chat').style.display = mode==='gpt'?'block':'none';
+  document.getElementById('gpt-input').style.display = mode==='gpt'?'flex':'none';
+  document.getElementById('gemini-chat').style.display = mode==='gemini'?'block':'none';
+  document.getElementById('gemini-input').style.display = mode==='gemini'?'flex':'none';
+  // Thêm hiển thị/ẩn cho KoHA tab
+  document.getElementById('koha-chat').style.display = mode==='koha'?'block':'none';
+  renderApiBtns(mode);
+  scrollToBottom();
+}
 
-      if(mode==='nebula'){
-        let iframe = document.getElementById('nebula-iframe');
-        if(!iframe.src || iframe.src==="about:blank") {
-          iframe.src = "nebulaAI-vision.html"; // Đổi tên đúng file giao diện vision của bạn!
-        }
-      }
-      renderApiBtns(mode);
-      scrollToBottom();
-    }
     function getAPIKey(type) {
       if (type==='gpt') return localStorage.getItem('openai_api_key')||'';
       if (type==='gemini') return localStorage.getItem('gemini_api_key')||'';
