--- a/nebulaAI.html
+++ b/nebulaAI.html
@@ -58,7 +58,18 @@
       display: flex; flex-wrap: wrap; gap: 7px; margin-top: 7px; margin-bottom: 7px;
     }
     .msg-img { max-width: 150px; max-height: 150px; border-radius: 10px; border: 1.5px solid #d3e0fa; object-fit: cover; background: #f8fafc;}
-    .chat-footer { background: #f2f3f7; border-top: 1.5px solid #dde2eb; z-index: 2; width: 100vw; padding: 0 2vw 0 2vw; display: flex; align-items: center; box-sizing: border-box; justify-content: center; min-height: 74px;}
+    .chat-footer {
+  background: #f2f3f7;
+  border-top: 1.5px solid #dde2eb;
+  z-index: 2;
+  width: 100vw;
+  padding: 0 2vw 24px 2vw;   /* Sửa ở đây: thêm 24px padding dưới */
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  justify-content: center;
+  min-height: 74px;
+}
     .footer-inner { width: 100vw; max-width: 100vw; margin: 0; display: flex; flex-direction: column; gap: 2px; align-items: stretch;}
     .input-row { display: flex; align-items: flex-end; gap: 7px; width: 100%;}
     .add-img-btn { background: #416be6; color: #fff; border: none; border-radius: 8px; padding: 7px 13px; font-size: 20px; cursor: pointer; transition: background 0.18s; font-weight: 500; height: 44px; align-self: flex-end; min-width: 44px; margin-bottom: 2px; display: flex; align-items: center; justify-content: center;}
