--- a/chat-ai.html
+++ b/chat-ai.html
@@ -180,7 +180,7 @@
   <button class="mode-btn active" onclick="switchMode('chatbase')">Chatbase</button>
   <button class="mode-btn" onclick="switchMode('gpt')">Chat GPT</button>
   <button class="mode-btn" onclick="switchMode('gemini')">Chat Gemini</button>
-  <button class="mode-btn" onclick="switchMode('koha')">AI KoHA</button> <!-- Thêm dòng này -->
+  <button class="mode-btn" onclick="switchMode('koha')">Virtual Assistant KoHa</button> <!-- Thêm dòng này -->
 </div>
 <div class="chat-body">
   <div id="chatbase-chat" class="chat-messages" style="display:block;text-align:center;padding:0;">
