--- a/login.html
+++ b/login.html
@@ -3,18 +3,94 @@
 <head>
   <meta charset="UTF-8">
   <title>Đăng nhập</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      background: #f5f7fa;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Segoe UI', Arial, sans-serif;
+    }
+    .login-box {
+      background: #fff;
+      padding: 40px 32px 30px;
+      border-radius: 12px;
+      box-shadow: 0 2px 16px 0 rgba(0,0,0,0.08);
+      width: 100%;
+      max-width: 350px;
+    }
+    .login-box h2 {
+      margin-bottom: 18px;
+      color: #222;
+      font-size: 1.8rem;
+      text-align: center;
+      font-weight: 700;
+    }
+    .login-box input[type="text"], .login-box input[type="password"] {
+      width: 100%;
+      padding: 10px 12px;
+      margin-bottom: 18px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      font-size: 1rem;
+      outline: none;
+      transition: border .2s;
+    }
+    .login-box input:focus {
+      border: 1.5px solid #4a90e2;
+    }
+    .login-box button {
+      width: 100%;
+      padding: 11px 0;
+      background: linear-gradient(90deg,#3a7bd5,#4a90e2);
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 5px;
+      box-shadow: 0 1px 6px 0 rgba(74,144,226,0.15);
+      transition: background .2s;
+    }
+    .login-box button:hover {
+      background: linear-gradient(90deg,#4a90e2,#3a7bd5);
+    }
+    .login-box .error {
+      color: #e84118;
+      font-size: 0.97rem;
+      min-height: 18px;
+      margin-bottom: 8px;
+      text-align: center;
+    }
+    .login-box .link {
+      display: block;
+      margin-top: 16px;
+      text-align: center;
+      font-size: 0.98rem;
+    }
+    .login-box .link a {
+      color: #4a90e2;
+      text-decoration: none;
+    }
+    .login-box .link a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h2>Đăng nhập</h2>
-  <form id="loginForm">
-    <input type="text" id="username" placeholder="Tài khoản" required><br>
-    <input type="password" id="password" placeholder="Mật khẩu" required><br>
+  <form class="login-box" id="loginForm">
+    <h2>Đăng nhập</h2>
+    <div class="error" id="error"></div>
+    <input type="text" id="username" placeholder="Tên đăng nhập" autocomplete="username" required>
+    <input type="password" id="password" placeholder="Mật khẩu" autocomplete="current-password" required>
     <button type="submit">Đăng nhập</button>
+    <div class="link">Chưa có tài khoản? <a href="register.html">Đăng ký ngay</a></div>
   </form>
-  <div id="error"></div>
-  <a href="register.html">Chưa có tài khoản? Đăng ký!</a>
   <script>
-    const backendUrl = "https://login-backend-pg7j.onrender.com"; // Đổi đúng link backend
+    const backendUrl = "https://login-backend-pg7j.onrender.com";
     document.getElementById('loginForm').onsubmit = async function(e) {
       e.preventDefault();
       const username = document.getElementById('username').value;
@@ -27,7 +103,7 @@
       if (res.ok) {
         const data = await res.json();
         localStorage.setItem('token', data.token);
-        window.location.href = "index.html"; // hoặc trang bạn muốn redirect
+        window.location.href = "index.html";
       } else {
         document.getElementById('error').textContent = "Sai tài khoản hoặc mật khẩu!";
       }
