--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
       text-align: center;
       font-weight: 700;
     }
-    .register-box input[type="text"], .register-box input[type="password"] {
+    .register-box input[type="text"], .register-box input[type="password"], .register-box input[type="email"] {
       width: 100%;
       padding: 10px 12px;
       margin-bottom: 18px;
@@ -85,6 +85,7 @@
     <h2>Đăng ký tài khoản</h2>
     <div class="error" id="error"></div>
     <input type="text" id="username" placeholder="Tên đăng nhập" autocomplete="username" required>
+    <input type="email" id="email" placeholder="Email" autocomplete="email" required>
     <input type="password" id="password" placeholder="Mật khẩu" autocomplete="new-password" required>
     <button type="submit">Đăng ký</button>
     <div class="link">Đã có tài khoản? <a href="login.html">Đăng nhập</a></div>
@@ -94,17 +95,18 @@
     document.getElementById('registerForm').onsubmit = async function(e) {
       e.preventDefault();
       const username = document.getElementById('username').value;
+      const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
       const res = await fetch(backendUrl + '/register', {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ username, password })
+        body: JSON.stringify({ username, email, password })
       });
+      const data = await res.json();
       if (res.ok) {
-        alert("Đăng ký thành công! Mời đăng nhập.");
+        alert(data.message || "Đăng ký thành công! Hãy kiểm tra email để xác thực.");
         window.location.href = "login.html";
       } else {
-        const data = await res.json();
         document.getElementById('error').textContent = data.message || "Đăng ký thất bại!";
       }
     }
