--- a/register.html
+++ b/register.html
@@ -3,113 +3,133 @@
 <head>
   <meta charset="UTF-8">
   <title>Đăng ký</title>
+  <link rel="icon" type="image/png" href="logo.png">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
-      background: #f5f7fa;
-      min-height: 100vh;
+      background: radial-gradient(ellipse at 60% 40%, #233d61 0%, #0a1931 100%);
+      font-family: 'Montserrat', Arial, sans-serif;
+      margin: 0;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      font-family: 'Segoe UI', Arial, sans-serif;
+      min-height: 100vh;
     }
-    .register-box {
-      background: #fff;
-      padding: 40px 32px 30px;
-      border-radius: 12px;
-      box-shadow: 0 2px 16px 0 rgba(0,0,0,0.08);
-      width: 100%;
-      max-width: 350px;
-    }
-    .register-box h2 {
-      margin-bottom: 18px;
-      color: #222;
-      font-size: 1.8rem;
+    .box {
+      background: rgba(18,32,67,0.96);
+      padding: 40px 28px 34px;
+      border-radius: 20px;
+      box-shadow: 0 6px 32px #12204385;
+      max-width: 400px;
+      width: 90%;
       text-align: center;
-      font-weight: 700;
+      backdrop-filter: blur(2.5px);
     }
-    .register-box input[type="text"], .register-box input[type="password"], .register-box input[type="email"] {
+    .box h2 {
+      color: #63aaff;
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+      letter-spacing: .8px;
+      text-shadow: 0 2px 12px #185adb34;
+    }
+    .box input {
       width: 100%;
-      padding: 10px 12px;
+      padding: 12px;
       margin-bottom: 18px;
       border: 1px solid #ddd;
-      border-radius: 6px;
+      border-radius: 8px;
       font-size: 1rem;
       outline: none;
-      transition: border .2s;
     }
-    .register-box input:focus {
+    .box input:focus {
       border: 1.5px solid #4a90e2;
     }
-    .register-box button {
+    .box button {
       width: 100%;
-      padding: 11px 0;
+      padding: 14px 0;
       background: linear-gradient(90deg,#3a7bd5,#4a90e2);
-      color: #fff;
+      color: white;
       border: none;
-      border-radius: 6px;
-      font-size: 1rem;
-      font-weight: bold;
+      border-radius: 8px;
+      font-size: 1.1rem;
+      font-weight: 700;
       cursor: pointer;
-      margin-top: 5px;
-      box-shadow: 0 1px 6px 0 rgba(74,144,226,0.15);
-      transition: background .2s;
+      box-shadow: 0 4px 18px #13204334;
+      transition: transform 0.18s;
     }
-    .register-box button:hover {
-      background: linear-gradient(90deg,#4a90e2,#3a7bd5);
+    .box button:hover {
+      transform: scale(1.04);
     }
-    .register-box .error {
-      color: #e84118;
-      font-size: 0.97rem;
-      min-height: 18px;
-      margin-bottom: 8px;
-      text-align: center;
+    .box .link {
+      margin-top: 14px;
+      font-size: 1rem;
+      color: #8ebeff;
     }
-    .register-box .link {
-      display: block;
-      margin-top: 16px;
-      text-align: center;
-      font-size: 0.98rem;
-    }
-    .register-box .link a {
+    .box .link a {
       color: #4a90e2;
       text-decoration: none;
     }
-    .register-box .link a:hover {
+    .box .link a:hover {
       text-decoration: underline;
+    }
+    footer {
+      margin-top: 40px;
+      width: 100%;
+      background: #122043;
+      color: #8ebeff;
+      text-align: center;
+      padding: 26px 10px 16px;
+      font-size: 1.08rem;
+      letter-spacing: .22px;
+      border-radius: 22px 22px 0 0;
+      box-shadow: 0 -3px 22px #0a193112;
     }
   </style>
 </head>
 <body>
-  <form class="register-box" id="registerForm">
+  <div class="box">
     <h2>Đăng ký tài khoản</h2>
-    <div class="error" id="error"></div>
-    <input type="text" id="username" placeholder="Tên đăng nhập" autocomplete="username" required>
-    <input type="email" id="email" placeholder="Email" autocomplete="email" required>
-    <input type="password" id="password" placeholder="Mật khẩu" autocomplete="new-password" required>
-    <button type="submit">Đăng ký</button>
+    <input type="text" id="username" placeholder="Tên đăng nhập" required>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="password" id="password" placeholder="Mật khẩu" required>
+    <button onclick="register()">Đăng ký</button>
     <div class="link">Đã có tài khoản? <a href="login.html">Đăng nhập</a></div>
-  </form>
+  </div>
+
+  <footer id="footer"></footer>
+
   <script>
     const backendUrl = "https://login-backend-pg7j.onrender.com";
-    document.getElementById('registerForm').onsubmit = async function(e) {
-      e.preventDefault();
+
+    async function register() {
       const username = document.getElementById('username').value;
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
-      const res = await fetch(backendUrl + '/register', {
+
+      if (!username || !email || !password) {
+        alert("Vui lòng nhập đầy đủ thông tin.");
+        return;
+      }
+
+      const res = await fetch(`${backendUrl}/register`, {
         method: "POST",
-        headers: { "Content-Type": "application/json" },
+        headers: {"Content-Type": "application/json"},
         body: JSON.stringify({ username, email, password })
       });
       const data = await res.json();
+
       if (res.ok) {
         alert(data.message || "Đăng ký thành công! Hãy kiểm tra email để xác thực.");
-        window.location.href = "login.html";
       } else {
-        document.getElementById('error').textContent = data.message || "Đăng ký thất bại!";
+        alert(data.message || "Đăng ký thất bại.");
       }
     }
+
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(html => document.getElementById('footer').innerHTML = html);
   </script>
 </body>
 </html>
